# wtr_tool

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  wtr_spec.md
shell/: wtr.fish  wtr.sh
shell/completions/: wtr.bash  wtr.fish  wtr.zsh
src/wtr/: __init__.py  cli.py  config.py  fuzzy.py  git.py  tui.py
